--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3081220230802001",
     "@dcloudio/uni-mp-xhs": "3.0.0-alpha-3081220230802001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-ui": "^1.4.28",
     "pinia": "2.0.27",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.2.47",
@@ -89,6 +90,7 @@
     "miniprogram-api-typings": "^3.12.0",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
+    "sass-loader": "10.1.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.8"
