--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,8 @@
   "semi": false,
   "printWidth": 100,
   "trailingComma": "all",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "[javascript]": {
+    "editor.formatOnSave": true
+  }
 }
