feat: add category in home page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "extends": "@vue/tsconfig/tsconfig.json",
   "compilerOptions": {
     "moduleResolution": "Node",
-    "module": "ESNext",
-    "target": "ESNext",
+    "module": "ES2022",
+    "target": "ES2022",
     "useDefineForClassFields": true,
     "verbatimModuleSyntax": true,
     "allowSyntheticDefaultImports": true,
+    "typeRoots": ["./src/types", "./node_modules/@types"],
     "allowJs": true,
     "jsx": "preserve",
     "sourceMap": true,
