--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Shopee",
-  "appid": "",
+  "appid": "__UNI__102730A",
   "description": "",
   "versionName": "1.0.0",
   "versionCode": 1,
@@ -50,11 +50,16 @@
   "quickapp": {},
   /* 小程序特有相关 */
   "mp-weixin": {
-    "appid": "wxb3811fdd68761036",
+    // "appid": "wxb3811fdd68761036",
+    "appid": "wx1da7b1e4b58b7178",
     "setting": {
-      "urlCheck": false
+      "urlCheck": false,
+      "es6": true,
+      "minified": true,
+      "postcss": true
     },
-    "usingComponents": true
+    "usingComponents": true,
+    "permission": {}
   },
   "mp-alipay": {
     "usingComponents": true
@@ -68,5 +73,11 @@
   "uniStatistics": {
     "enable": false
   },
-  "vueVersion": "3"
+  "vueVersion": "3",
+  "h5": {
+    "router": {
+      "mode": "history",
+      "base": "./"
+    }
+  }
 }
